Eliminando SVG y añadiendo icono de Bootstrap

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,21 +67,7 @@
           <a
             routerLink="/login"
             class="btn btn-lg btn-color text-light fw-500 me-sm-3 mb-3 mb-sm-0"
-            >Comienza<svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="feather feather-arrow-right ms-2"
-            >
-              <line x1="5" y1="12" x2="19" y2="12"></line>
-              <polyline points="12 5 19 12 12 19"></polyline></svg
-          ></a>
+            >Comienza<i class="bi bi-arrow-right-short ms-2"></i></a>
           <div class="btn btn-lg link-color fw-500">Contáctanos</div>
         </div>
       </div>
