--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -206,8 +206,8 @@
         <br />
       </div>
     </div>
-    <input #pictureProfile type="file" name="pictureProfile" />
     <button (click)="test()"></button>
   </div>
+  <button class="button" (click)="getRankingByUser()"></button>
 </div>
 <div class="row" style="height: 48vh"></div>
