--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@
 }
 
 *, html, body {
-    font-family: 'Circular Std Bold', sans-serif;
+    font-family: 'Circular Std Bold', sans-serif !important; 
 }
 
 /* SCROLLBAR */
