Obtener datos del perfil con el metodo getProfile en http.service.ts

--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -209,6 +209,6 @@
 
     <button (click)="test()"></button>
   </div>
-  <button class="button" (click)="getRankingByUser()"></button>
+  <button class="button" (click)="getRankings()"></button>
 </div>
 <div class="row" style="height: 48vh"></div>
