Añadiendo condicion de disabledButton

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                         <small [@fadeIn] class="text-success"><i class="bi bi-check-lg me-2"></i>La contraseña es válida.</small>
                     </div>
                     <div class="d-grid mt-3">
-                        <button type="submit" class="btn btn-color text-light mb-2" [disabled]="!loginForm.valid">Iniciar sesión</button>
+                        <button type="submit" class="btn btn-color text-light mb-2" [disabled]="!loginForm.valid || disabledButton">Iniciar sesión</button>
                     </div>
                     <hr class="my-1 border-danger">
                     <div class="d-flex justify-content-center mt-3">
@@ -32,11 +32,8 @@
                         <button class="btn bg-primary btn-color text-light mx-1" disabled><i class="bi bi-facebook"></i></button>
                     </div>
                 </form>
-                <div class="d-flex justify-content-center mb-3">
-                    <small>
-                        ¿Todavia no tienes una cuenta?
-                        <a class="link-color" routerLink="/register">Registrate aquí</a>
-                    </small>
+                <div class="d-flex justify-content-center text-center mb-3">
+                    <a class="link-color" routerLink="/register">Registrate aquí</a>
                 </div>
             </div>
         </div>
