Eliminando estilos anteriores

--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -1,55 +1,4 @@
-@import "@angular/material/prebuilt-themes/indigo-pink.css";
-#avatar {
-  background-color: black;
-  width: 10rem;
-  height: 10rem;
-  margin-left: 2vw;
-}
-
-.rankings-container {
-  height: 50vh;
-  width: 40vw;
-}
-.select-ranking {
-  margin-top: -2%;
-}
-
-.filter-icons {
-  height: 5vh;
-  margin-bottom: 2rem;
-  margin-top: -0.5rem;
-}
-
-.destacados {
-  height: 50vh;
-}
-
-.nombre-ranking {
-  color: black;
-  margin-bottom: 2%;
-  font-size: 2vh;
-}
-
-.tabla-ranking {
-  border-radius: 0.5rem;
-  box-shadow: black 15px;
-  width: 98% !important;
-}
-
-.ranking-container {
-  padding-right: 0 !important;
-}
-
-table {
+.thumbnails {
   width: 100%;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
-}
-
-.icono-destacados {
-  width: 5rem;
-  height: 3rem;
+  height: auto;
 }
